[gd_scene load_steps=2 format=3 uid="uid://dl2csol50qxan"]

[ext_resource type="Script" uid="uid://xxdc1ufj4ewo" path="res://debug/card_spawn.gd" id="1_mbaiy"]

[node name="CardSpawn" type="HBoxContainer"]
offset_right = 1.0
offset_bottom = 23.0
script = ExtResource("1_mbaiy")

[node name="SpawnInDeck" type="Button" parent="."]
layout_mode = 2
text = "Deck"

[node name="SpawnInHand" type="Button" parent="."]
layout_mode = 2
text = "Hand"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="SpawnInDeck" to="." method="_on_spawn_in_deck_pressed"]
[connection signal="pressed" from="SpawnInHand" to="." method="_on_spawn_in_hand_pressed"]
